# facexp

./: .gitignore  README.md  test.html  todo.txt
backend/: .isort.cfg  .pylintrc  README.md  check_experiment.py  example.env  makefile  pyproject.toml  schema.yml  test_analysis_endpoint.py  test_categorical_anova.py
backend/core/: admin.py  exceptions.py  models.py  settings.py  urls.py  validators.py  views.py
backend/core/config/: base.py  development.py  production.py  testing.py
backend/experiments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/experiments/migrations/: 0001_initial.py  0002_factor.py  0003_responsevariable.py  0004_experimentrun.py  0005_experiment_replicates_experimentrun_replicate_number.py  0006_remove_optimization_goal.py
backend/experiments/services/: __init__.py  analysis.py
backend/experiments/tests/: __init__.py  factories.py  test_analysis_calculations.py  test_api.py  test_example_sum_of_squares.py  test_models.py
backend/users/: admin.py  managers.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
backend/users/migrations/: 0001_initial.py  0002_customuser_login_code_and_more.py  0002_remove_customuser_date_birth_and_more.py
backend/users/templates/admin/users/: add_manual_credit.html  balance_changelist.html
backend/users/templates/users/: confirmation_email.html  password_reset_email.html
backend/users/tests/: __init__.py  factories.py  manual_test_view.py  test_models.py  test_view.py
frontend/: AUTHENTICATION.md  orval.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
(+71 files in other folders)
