[tool.poetry]
name = "facexp"
version = "0.1.0"
description = ""
authors = ["Marco Antonio Rodrigues Gomes de Souza <94053824+Marco-Antonio-Rodrigues@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
pylint-django = "^2.5.5"
pillow = "^10.4.0"
requests = "^2.32.5"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.29.0"
drf-nested-routers = "^0.95.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
scipy = "^1.15.1"
statsmodels = "^0.14.4"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"
ruff = "^0.6.8"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 150
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

